@@ -2016,8 +2016,21 @@ rpmInitMacros(MacroContext mc, const char * macrofiles)
 	    continue;
 
 	/* Read macros from each file. */
+
 	for (i = 0; i < ac; i++) {
-	    (void) rpmLoadMacroFile(mc, av[i]);
+	    size_t slen = strlen(av[i]);
+
+	/* Skip backup files and %config leftovers. */
+#define	_suffix(_s, _x) \
+    (slen >= sizeof(_x) && !strcmp((_s)+slen-(sizeof(_x)-1), (_x)))
+	    if (!(_suffix(av[i], "~")
+	       || _suffix(av[i], ".rpmnew")
+	       || _suffix(av[i], ".rpmorig")
+	       || _suffix(av[i], ".rpmsave"))
+	       )
+		   (void) rpmLoadMacroFile(mc, av[i]);
+#undef _suffix
+
 	    av[i] = _free(av[i]);
 	}
 	av = _free(av);
